# btrfs-snapshotter

./: Cargo.toml  README.md
.cargo/: config.toml
pkg/common/: btrfs-snapshotter.service  config.toml
pkg/debian/: postrm
src/: init.rs  main.rs
