[package]
name = "btrfs-snapshotter"
version = "0.1.0"
edition = "2024"
description = "A program to snapshot btrfs filesystems."
rust-version = "1.91"
publish = false
repository = "https://github.com/edward-scroop/btrfs-snapshotter"
license = "GPL-3.0-or-later"

[package.metadata.deb]
revision = "1"
maintainer = "Edward Scroop <edward.scroop@gmail.com>"
copyright = "2026 Edward Scroop <edward.scroop@gmail.com>"
separate-debug-symbols = true
profile = "deb-release"
assets = [
    [
        "target/release/snapshotter",
        "/usr/bin/snapshotter",
        "755",
    ],
    [
        "pkg/common/config.toml",
        "etc/btrfs-snapshotter/config.toml",
        "644"
    ],
]
maintainer-scripts = "pkg/debian/"
systemd-units = { unit-name = "btrfs-snapshotter", unit-scripts = "pkg/common" }
dbgsym = true

[[bin]]
name = "snapshotter"
path = "src/main.rs"

[profile.dev]
opt-level = 2
debug = "full"
strip = "none"
lto = "off"
panic = "abort"
incremental = true
codegen-units = 256

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
debug = "full"
split-debuginfo = "packed"
strip = "none"
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 8

[profile.deb-release]
inherits = "release"
split-debuginfo = "off"

[profile.bench]
inherits = "release"

[dependencies]
jiff = { version = "0.2.18", features = ["logging"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
serde = { version = "1.0.228", features = ["derive"]}
toml = "0.9.11"

[lints.clippy]
unwrap_used = "deny"
